# ChangeLog for dev-perl/Class-XSAccessor
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-XSAccessor/ChangeLog,v 1.16 2011/12/19 15:41:51 tove Exp $

*Class-XSAccessor-1.130.0 (19 Dec 2011)

  19 Dec 2011; Torsten Veller <tove@gentoo.org>
  +Class-XSAccessor-1.130.0.ebuild:
  Version bump

*Class-XSAccessor-1.120.0 (05 Sep 2011)

  05 Sep 2011; Torsten Veller <tove@gentoo.org>
  +Class-XSAccessor-1.120.0.ebuild:
  Version bump

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Class-XSAccessor-1.110.ebuild:
  Cleanup

*Class-XSAccessor-1.110.0 (01 Sep 2011)

  01 Sep 2011; Torsten Veller <tove@gentoo.org>
  +Class-XSAccessor-1.110.0.ebuild:
  Change version scheme

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -Class-XSAccessor-1.05.ebuild,
  -Class-XSAccessor-1.07.ebuild, -Class-XSAccessor-1.08.ebuild,
  -Class-XSAccessor-1.09.ebuild:
  Cleanup

*Class-XSAccessor-1.110 (12 Jan 2011)

  12 Jan 2011; Torsten Veller <tove@gentoo.org> +Class-XSAccessor-1.110.ebuild:
  Version bump

*Class-XSAccessor-1.09 (03 Nov 2010)

  03 Nov 2010; Torsten Veller <tove@gentoo.org>
  +Class-XSAccessor-1.09.ebuild:
  Version bump

  14 Oct 2010; Brent Baude <ranger@gentoo.org> Class-XSAccessor-1.08.ebuild:
  Marking Class-XSAccessor-1.08 ~ppc for bug 337974

  22 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  Class-XSAccessor-1.08.ebuild:
  Marked ~ppc-macos

*Class-XSAccessor-1.08 (18 Sep 2010)

  18 Sep 2010; Torsten Veller <tove@gentoo.org>
  +Class-XSAccessor-1.08.ebuild:
  Version bump

*Class-XSAccessor-1.07 (17 Aug 2010)

  17 Aug 2010; Torsten Veller <tove@gentoo.org>
  +Class-XSAccessor-1.07.ebuild:
  Version bump

  24 Dec 2009; Torsten Veller <tove@gentoo.org>
  -Class-XSAccessor-1.03.ebuild:
  Cleanup

  23 Dec 2009; Fabian Groffen <grobian@gentoo.org>
  Class-XSAccessor-1.05.ebuild:
  Marked ~x86-solaris, bug #296509

  23 Nov 2009; Torsten Veller <tove@gentoo.org>
  Class-XSAccessor-1.05.ebuild: