@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Class-XSAccessor
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-XSAccessor/ChangeLog,v 1.16 2011/12/19 15:41:51 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-XSAccessor/ChangeLog,v 1.17 2012/02/18 15:25:33 tove Exp $
+
+  18 Feb 2012; Torsten Veller <tove@gentoo.org>
+  -Class-XSAccessor-1.110.0.ebuild, -Class-XSAccessor-1.120.0.ebuild:
+  Cleanup
 
 *Class-XSAccessor-1.130.0 (19 Dec 2011)
 
